fixed overflow problem

--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,11 @@
 
 @media (max-width: 800px) {
     
+    html, body {
+        overflow-x: hidden;
+        max-width: 100vw;
+    }
+
     body {
         margin: 0;
         padding: 0;
